--- a/contact.html
+++ b/contact.html
@@ -90,7 +90,7 @@
             <footer>
                 <div class="grid-footer">
                     <div class="footer-col">
-                        <h1>Reasource</h1>
+                        <h1>Resource</h1>
                         <p>Libarary</p>
                         <p>Faatix web</p>
                         <p>NFT</p>
@@ -148,14 +148,9 @@
 
 
 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css" />
 
-
-
-
-
-
-
-    <script src="https://unpkg.com/scrollreveal"></script>
 
 
     <script src="java2.js"></script>
