--- a/services.html
+++ b/services.html
@@ -41,7 +41,7 @@
         </div>
     </header>
 
-    <section class="bussiness">
+    <section class="bussiness" data-aos="fade-down" data-aos-delay="200">
         <div class="containert">
             <div class="contact-title">
                 <h1>Commitment</h1>
@@ -125,7 +125,7 @@
             <footer>
                 <div class="grid-footer">
                     <div class="footer-col">
-                        <h1>Reasource</h1>
+                        <h1>Resource</h1>
                         <p>Libarary</p>
                         <p>Faatix web</p>
                         <p>NFT</p>
@@ -185,12 +185,12 @@
 
 
 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css" />
 
 
 
 
-
-    <script src="https://unpkg.com/scrollreveal"></script>
 
 
     <script src="java2.js"></script>
