--- a/index2.html
+++ b/index2.html
@@ -47,7 +47,7 @@
             <a href="detail.html" class="btn-show">View here</a>
         </div>
         <div class="show-img">
-            <img src="/studio files/images/tinywow_change_bg_photo_21576298.png" alt="">
+            <img src="./images/tinywow_change_bg_photo_21576298.png" alt="">
         </div>
     </section>
     <!--our work-->
@@ -122,7 +122,7 @@
             <div class="director-col">
                 <div class="director-info">
                     <div class="img">
-                        <img width="80" src="/studio files/images/austin-wade-X6Uj51n5CE8-unsplash.jpg" alt="director">
+                        <img width="80" src="./images/austin-wade-X6Uj51n5CE8-unsplash.jpg" alt="director">
                     </div>
                     <h2>Director <span>Mascuud</span></h2>
                     <p>Collobartion</p>
